# War3WeCoreAndPlugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLUGIN_DEV.md  README.md  build.bat  build.ps1
Data/: CliffTypes.slk  Terrain.slk  Water.slk  Weather.slk
gui/: CMakeLists.txt  filebrowser.cpp  filebrowser.h  main_gui.cpp  mainwindow.cpp  mainwindow.h  mapinfopage.cpp  mapinfopage.h  objecteditor.cpp  objecteditor.h  placementeditor.cpp  placementeditor.h  settingsdialog.cpp  settingsdialog.h  terrain_renderer_base.cpp  terrain_renderer_base.h  terraineditor.cpp  terraineditor.h
plugins/: CMakeLists.txt
plugins/sample_tab/: sample_tab.cpp  sample_tab.h
plugins/terrain_edit/: PLAN.md  TODO.md  TimeLine.md  blp_reader.cpp  blp_reader.h  terrain_edit_plugin.cpp  terrain_edit_plugin.h  terrain_edit_types.h  terrain_edit_widget.cpp  terrain_edit_widget.h  terrain_edit_window.cpp  terrain_edit_window.h
plugins/terrain_edit/translations/: terrain_edit_zh_CN.ts
src/: CMakeLists.txt  main.cpp
src/core/: archive.cpp  archive.h  buffer.cpp  buffer.h  doo.cpp  doo.h  imp.cpp  imp.h  ini.cpp  ini.h  map_builder.cpp  map_builder.h  metadata.cpp  metadata.h  object_id_gen.cpp  object_id_gen.h  plugin.h  plugin_registry.cpp  plugin_registry.h  shd.cpp  shd.h  slk.cpp  slk.h  types.h  units_doo.cpp  units_doo.h  w3c.cpp  w3c.h  w3e.cpp  w3e.h  w3f.cpp  w3f.h  w3i.cpp  w3i.h  w3o.cpp  w3o.h  w3r.cpp  w3r.h  w3s.cpp  w3s.h  (+14 more)
tests/: test_archive.cpp  test_buffer.cpp  test_doo.cpp  test_main.cpp  test_object_id_gen.cpp  test_slk.cpp  test_units_doo.cpp  test_w3e.cpp  test_w3i.cpp  test_w3u.cpp  test_wts.cpp
translations/: w3x-packer_zh_CN.qm  w3x-packer_zh_CN.ts
